maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:14: error: identifier expected but ':' found.
def keepHandOnSideWall(:Int){
                       ^PledgeMaze:54: error: ':' expected but '}' found.
}
^