maze.pledge.PledgeMaze.scala.code
override def run() {
  var cpt=0
  while(!estSurBiscuit){
    if(cpt==0 && !estFaceMur){
      avance()
    }
    else{
      keepHandOnSideWall(cpt)
    }
  }
}

def keepHandOnSideWall(:Int){
 	if(estFaceMur()){
    droite()
    cpt+=1
  }  
  if(estFaceMur()){
    droite()
    cpt+=1
  }
  if(estFaceMur()){
    droite()
    cpt+=1
  }
  avance()
  gauche()
  cpt-=1
}

def isDirectionFree(:dir){
  var c=0
  while(getDirection!=dir){
    c+=1
    droite()
  }
  if(estFaceMur){
    while(c!=0){
      gauche()
      c-=1
    }
    return false
  }
  else{
    while(c!=0){
      gauche()
      c-=1
    }
    return true
  }
}